# EmailSimulator

./: CMakeLists.txt  README.md
img/: main.aps
src/: main.cpp
src/CheckWindow/: CheckWindow.cpp  CheckWindow.h  CheckWindow.ui
src/CreateUserWindow/: CreateUserWindow.cpp  CreateUserWindow.h  CreateUserWindow.ui
src/include/: Admin.h  Mail.h  SqlConnectionPool.h  User.h  config.h  head.h  logger.h  main.h
src/logWindow/: logWindow.cpp  logWindow.h  logWindow.ui
src/mailLineWindow/: OneMailLine.cpp  OneMailLine.h  OneMailLine.ui
src/mainWindow/: MainWindow.cpp  MainWindow.h  MainWindow.ui
src/mysql/: Admin.cpp  Mail.cpp  SqlConnectionPool.cpp  User.cpp
src/receiveWindow/: ReceiveWindowFinal.cpp  ReceiveWindowFinal.h  ReceiveWindowFinal.ui
src/sendWindow/: sendWindow.cpp  sendWindow.h  sendWindow.ui
temp/: webdist2.html
test/mysql/: admintest.cpp  usertest.cpp
